force-app/main/default/objects/Sample_Inventory__c/Sample_Inventory__c.object-meta.xml
<CustomObject>
    <label>Sample Inventory</label>
    <nameField>
        <displayFormat>SI-{00000}</displayFormat>
        <label>Sample Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>