force-app/main/default/objects/Sample_Inventory__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <label>Lot Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>