force-app/main/default/objects/Sample_Inventory__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sample Inventory</relationshipLabel>
    <relationshipName>Sample_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>