force-app/main/default/objects/Sample_Inventory__c/fields/Quantity_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Quantity_On_Hand__c</fullName>
    <label>Quantity On Hand</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>